fix AES for java 11